refactor: Update React and dependencies, remove import maps
Updates React to v19.2.0 and react-router-dom to v7.9.5. Removes explicit CDN import maps from index.html to facilitate a standard build process compatible with platforms like Vercel.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,7 @@
     <meta name="description" content="Explore the beauty of Mexico with our guided eBike tours in Cancun, Mexico City, Oaxaca, and more. Book your adventure today!">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚲</text></svg>">
-  <script type="importmap">
-{
-  "imports": {
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
-  }
-}
-</script>
+    <!-- The importmap has been removed to prepare the project for a standard build process (e.g., Vite) required by Vercel. -->
     <!-- Google Analytics / Google Tag Manager Placeholder -->
     <!-- 
       <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GA_ID"></script>
@@ -60,6 +50,17 @@
       }
     }
     </script>
+<script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5"
+  }
+}
+</script>
 </head>
   <body class="bg-gray-50 text-gray-800">
     <div id="root"></div>
