--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Explore the beauty of Mexico with our guided eBike tours in Cancun, Mexico City, Oaxaca, and more. Book your adventure today!">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚲</text></svg>">
-    <!-- The importmap has been removed to prepare the project for a standard build process (e.g., Vite) required by Vercel. -->
     <!-- Google Analytics / Google Tag Manager Placeholder -->
     <!-- 
       <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GA_ID"></script>
@@ -53,17 +52,19 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 text-gray-800">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
